chore: save progress across microservices